--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -2,7 +2,7 @@ template(name='delta')
     with current_model
         .ui.stackable.padded.grid
             .row
-                .five.wide.column.scrolling
+                .five.wide.column
                     .ui.inline.header
                         i.icon(class=icon)
                         //- +i name=icon
